# MPK.Puzzle

./: ..gitignore.swp  .README.md.swp  .README_BASE_289.md.swp  .README_LOCAL_289.md.swp  .README_REMOTE_289.md.swp  .gitignore  Backlog.txt  CMakeLists.txt  README.md  README_BACKUP_289.md  README_BASE_289.md  ToDo.txt  ToDo_advanced.docx  _README.txt
00_General/header/: input.h
01_Input/: _README.txt
01_Input/01_Klassenstruktur/: Klassenstruktur_Definition.docx
01_Input/01_Klassenstruktur/Klassenstruktur_Code/: main.cpp  main2.cpp
02_Solution/: _README.txt
03_Output/: _README.txt
Codicil/: test_puzzle_long40x40.h
Legacy/: Basic_Structure.txt
Legacy/Revision_01/: Puzzle.h  main.cpp
Legacy/Revision_02/: main.cpp  puzzle.h  test_puzzle.h
Legacy/Revision_03/: a.out  main.cpp  puzzle.h  test_puzzle_long40x40.h
Source/: Abstract_1.cpp  CMakeLists.txt  ReadMe.md  a.out  constrMatrix.cpp  constrMatrix.h  cornerFinder.cpp  cornerFindier.cpp  defines.h  display.cpp  example_Puzzles.cpp  header.h  main.cpp  path.cpp  path.h  position.h  puzzleBox.cpp  puzzleBox.h  puzzleGenerator.cpp  puzzleGenerator.hpp  step.cpp  step.h  straighten.cpp  test_constrMatrix.cpp  test_puzzle_long40x40.h
Source/Creator/: PuzzleCreator.cpp  PuzzleCreator.h
Source/Helper/: HelperFunctions.cpp  HelperFunctions.h
Source/Input/: Part.h
Source/Output/: SolutionElement.cpp  SolutionElement.h
Source/Solver/: PuzzleSolverGrp3.cpp  PuzzleSolverGrp3.h
Source/functions/: ReadMe.md  layer1.cpp  preproc_base.cpp
Source/functions/AbstractionLayers/: AbstraktionLayer_Base.cpp  AbstraktionLayer_Base.h
Source/functions/AbstractionLayers/DestructionPower/: DestructionPower.cpp  DestructionPower.h  DestructionPower_Properties.h
Source/functions/AbstractionLayers/Layer1/: AbstractionLayer_1.cpp  AbstractionLayer_1.h  AbstractionLayer_1_Properties.cpp  AbstractionLayer_1_Properties.h
Source/functions/AbstractionLayers/Layer2/: AbstractionLayer_2.cpp  AbstractionLayer_2.h  AbstractionLayer_2_Properties.cpp  AbstractionLayer_2_Properties.h
Source/functions/AbstractionLayers/Layer2_KantenLaenge/: AbstractionLayer_KantenLaenge.cpp  AbstractionLayer_KantenLaenge.h  AbstractionLayer_KantenLaenge_Properties.h
Source/functions/AbstractionLayers/Layer3_PoempelPosition/: AbstractionLayer_PoempelPosition.cpp  AbstractionLayer_PoempelPosition.h  AbstractionLayer_PoempelPosition_Properties.h
Source/functions/AbstractionLayers/LayerCluster/: AbstractionLayer_Cluster.cpp  AbstractionLayer_Cluster.h  AbstractionLayer_Cluster_Properties.h
Source/functions/AbstractionLayers/LayerHistogram/: AbstractionLayer_Histogram.cpp  AbstractionLayer_Histogram.h  AbstractionLayer_Histogram_Properties.h
Source/functions/AbstractionLayers/LayerMeanDifference/: AbstractionLayer_MeanDifference.cpp  AbstractionLayer_MeanDifference.h  AbstractionLayer_MeanDifference_Properties.h
Source/functions/AbstractionLayers/Layer_ColorMatching/: AbstractionLayer_ColorMatching.cpp  AbstractionLayer_ColorMatching.h  AbstractionLayer_ColorMatching_Properties.h
Source/functions/AbstractionLayers/Layer_Histogram/: AbstractionLayer_Histogram.cpp  AbstractionLayer_Histogram.h
Source/functions/AbstractionLayers/Layer_SURFFeatures/: AbstractionLayer_SURFFeatures.cpp  AbstractionLayer_SURFFeatures.h  AbstractionLayer_SURFFeatures_Properties.h
Source/functions/AbstractionLayers/Layer_TEMPLATE/: AbstractionLayer_TemplateLayer.cpp  AbstractionLayer_TemplateLayer.h  AbstractionLayer_TemplateLayer_Properties.h  TODO_FOR_NEW_LAYER.txt
Source/functions/solve/: classExtension.cpp  puzzleExtension.cpp  structure.cpp
Source/header/: Part.h  input.h  layer1.h  preproc_base.h  solve.h
Source/input/: input.md
Source/output/: output.md
TeamCMU/Revision_01/: Puzzle.h
TeamCMU/Revision_02/: a.out  puzzle.h
TeamCMU/Revision_03/: main.cpp  test_puzzle.h  test_puzzle_long40x40.h
images/input/input_BB/: input_BB.md
images/input/input_display/: input_display.md
shape_matching/: CMakeLists.txt  main.cpp  opencv_test.cpp
(+1 files in other folders)
